manifest/fleetman-position-simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulator
  namespace: default
  labels:
    app: simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simulator
  template:
    metadata:
      labels:
        app: simulator
    spec:
      imagePullSecrets:
        - name: regcred   # 👈 انتقال داده شد به جای درست
      containers:
      - name: simulator
        image: reg.iranshahrit.com:4443/simulator/simulator:develop-86
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
