manifest/fleetman-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetman-api-gateway
  namespace: default
  labels:
    app: fleetman-api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleetman-api-gateway
  template:
    metadata:
      labels:
        app: fleetman-api-gateway
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: api-gateway
        image: reg.iranshahrit.com:4443/api-gateway/api-gateway:develop-81
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-api-gateway
  labels:
    app: fleetman-api-gateway
spec:
  type: ClusterIP
  selector:
    app: fleetman-api-gateway
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
