manifest/fleetman-position-tracker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetman-position-tracker
  namespace: default
  labels:
    app: fleetman-position-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleetman-position-tracker
  template:
    metadata:
      labels:
        app: fleetman-position-tracker
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: fleetman-position-tracker
        image: reg.iranshahrit.com:4443/tracker/tracker:develop-87
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-position-tracker
  labels:
    app: fleetman-position-tracker
spec:
  type: ClusterIP
  selector:
    app: fleetman-position-tracker
  ports:
  - name: fleetman-position-tracker
    port: 8080
    targetPort: 8080
    protocol: TCP
